Bug 108951 - FILEOPEN: RTF: Custom bullets are displayed as standard bullets
Summary: FILEOPEN: RTF: Custom bullets are displayed as standard bullets
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2017-07-04 16:27 UTC by Xisco Faulí
Modified: 2017-10-22 22:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample (9.62 KB, application/msword)
2017-07-04 16:27 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-07-04 16:27:04 UTC
Created attachment 134481 [details]
sample

Steps:
1. Open attached document

Observed behaviour: Custom bullets are displayed as standard bullets


[Bug found by office-interoperability-tools]

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: cb37c5f0f3de7b545231a53d46a5271058af76ad
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-06-23_06:55:41
Locale: es-ES (es_ES); Calc: group
Comment 1 Xisco Faulí 2017-07-04 16:28:14 UTC
Regression introduced by:

author  Miklos Vajna <vmiklos@collabora.co.uk>  2017-05-16 06:34:40 (GMT)
committer       Miklos Vajna <vmiklos@collabora.co.uk>  2017-05-16 08:05:30
(GMT)
commit  f528f9499bd91b700c549575e88fa102cfffede9 (patch)
tree    3f6f1f61de123f5329cfc175ebd3bbaffac98574
parent  6170d7c6063da89929577702189e4e4bfe564cc7 (diff)
tdf#106953 RTF import: fix missing paragraph left margin
See commit 3915bf2dc877d5f1140798e24933db0f21386a4a (tdf#95376 DOCX
import: fix incorrectly indented tab stops, 2016-01-26) for the various
sources that can determine the paragraph indentation.

In this case the problem was that too aggressive RTF style deduplication
removed a direct indent, which then meant a fallback to the ind-from-num
value, not to the ind-from-parastyle one.

Bisected with bibisect-linux-64-5.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2017-07-25 06:09:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e87e93132f808ab95eab932b36bfe40d3cc607a

tdf#108951 RTF import: fix missing custom bullet types

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-07-27 15:34:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d216e9c5a3d5097a21e10540532e8b81fed65039&h=libreoffice-5-4

tdf#108951 RTF import: fix missing custom bullet types

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-08-01 22:56:51 UTC
Fix verified in

Version: 6.0.0.0.alpha0+
Build ID: 50799a721c7ddcf9475a1b79984ed64ddd7cdf57
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group