tdf#108951 RTF import: fix missing custom bullet types

Regression from commit f528f9499bd91b700c549575e88fa102cfffede9
(tdf#106953 RTF import: fix missing paragraph left margin, 2017-05-16)
where I fixed the parent of the ooxml::CT_NumPr_numId token at one
place, but forgot to adapt RTFDocumentImpl::popState() accordingly.

Change-Id: Ibddd2486a50f284e11c2cd96339e7140b427aae1
Reviewed-on: https://gerrit.libreoffice.org/40381
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>